# C_Number_Recognition

./: .gitignore  CMakeLists.txt  C_Number_Recognition.sln  Epoch, cost, accuracy.txt  Makefile
data/: model.cnn  model.nn
etc/: NN.h  adder.c  adder_gen.c  gym.c
ex/: XOR.c
src/: CNN.h  DRAW_INPUT.c  DRAW_INPUT.h  IMAGE_LOADER.h  NN.c  NN.h  XOR.c  gates.c  main.c  predict.c  train.c
